5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1876_1293.log
== TEST (2019-07-03 18:37:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= eval(float("digite x:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float("digite x:"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:37:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
y= array(float(input("digite y:")))
z= array(float(input("digite z:")))
for c in range(0, 3):
	for l in range(o, 3):
-- ERROR:
File "XXXX", line 8
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
y= array(float(input("digite y:")))
z= array(float(input("digite z:")))
for c in range(0, 3):
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:42:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
y= array(float(input("digite y:")))
z= array(float(input("digite z:")))

	
-- EXECUTION TIME:
0.944325
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1293/main.py", line 3, in <module>
    x= array(float(input("digite x:")))
ValueError: could not convert string to float: '[27740,26598,15468]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
y= array(float(input("digite y:")))
z= array(float(input("digite z:")))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(float(input("digite x:")))
y= array(float(input("digite y:")))
z= array(float(input("digite z:")))
print(x)
print(y)
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= array(int(input("digite x:")))
y= array(int(input("digite y:")))
z= array(int(input("digite z:")))
print(x)
print(y)
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:48:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= eval(int(input("digite x:")))
y= eval(int(input("digite y:")))
z= eval(int(input("digite z:")))
print(x)
print(y)
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:49:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= eval(int(input("digite x:")))
y= eval(int(input("digite y:")))
z= eval(int(input("digite z:")))
print(round(x, 0))
print(round(y, 0))
print(round(z, 0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:50:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= eval(float(input("digite x:")))
y= eval(float(input("digite y:")))
z= eval(float(input("digite z:")))
print(round(x, 0))
print(round(y, 0))
print(round(z, 0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:50:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
x= eval(float(input("digite x:")))
y= eval(float(input("digite y:")))
z= eval(float(input("digite z:")))
print(round(x, 0))
print(round(y, 0))
print(round(z, 0))
	
-- EXECUTION TIME:
1.16058
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1876/1293/main.py", line 3, in <module>
    x= eval(float(input()))
ValueError: could not convert string to float: '[27740,26598,15468]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
